# navsim

./: .gitignore  LICENSE  README.md  notas.md
doc/: dev_notes.md  install.md
doc/img/: videotest.mkv
doc/install/: install.md
doc/tuto1/: tuto1.md
doc/tuto2/: tuto2.md
doc/tuto3/: tuto3.md
doc/tuto5/: tuto5.md
doc/tutos/tuto1/: tuto1.md
doc/tutos/tuto2/: tuto2.md
doc/tutos/tuto3/: tuto3.md
doc/tutos/tuto4/: tuto4.md
doc/tutos/tuto5/: tuto5.md
matlab/builders/: SimpleBuilder.m
matlab/evaluation/: computation.m  simulation.m
matlab/monitors/: S_Monitoring.m  SimpleMonitor.m
matlab/monitors/utrafman/: S_Monitoring.m  SimulationProcesser.m
matlab/operators/: DC_Operator.m  DCpilot.slx  SimpleOperator.m  UAVinfo.m  USpaceOperator.m
matlab/planners/: FlightPlan.m  FlightPlanSet.m  InterpolationModes.m  Waypoint.m  testWPs.m  test_01.m
matlab/planners/dev/: matrixes.m
matlab/simulations/: DCpilot_sfun.mexw64  DroneChallenge.m  simul1.m  test.m
matlab/tools/: Copy_of_testClient.m  GAZEBO_Connector.m  GazeboClient.m  NAVSIM_PATHS.m  UTRAFMAN_PATH.m  UTRAFMAN_PATHS.m  UTRAFMAN_SimManager.m  UTRAFMAN_init.asv  UTRAFMAN_init.m  compile_ros_messages.m  test.m  testSimManager.m
models/: floor.sdf
ov/: abejorro.usd  abejorro2.usd  balancin2.usd  cubecoded.usd  ej1.usd  new_script.py  program.usd  utils.py
ov/abejorro/: UAM_minidrone.py  World.py  abejorro2.usd  abejorro_palas.usd  cube.usd
ov/extensions/: interfaces.pptx
ov/fleet/: drone_controller.py
ov/navsim_utils/: extensions_utils.py  paths_utils.py  utils.py
ov/ov_utils/: extensions_utils.py
ov/tmpRafa/: setup.py
utrafman_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
utrafman_ws/log/: latest_build
utrafman_ws/src/utrafman_msgs/: CMakeLists.txt  package.xml
utrafman_ws/src/utrafman_msgs/msg/: Telemetry.msg  UAV.msg  Uplan.msg
utrafman_ws/src/utrafman_msgs/srv/: DeployModel.srv  DeployUAV.srv  GetFPs.srv  GetOperators.srv  GetTelemetry.srv  GetUAVs.srv  RegisterFP.srv  RegisterOperator.srv  RegisterUAV.srv  Test.srv  Time.srv
utrafman_ws/src/utrafman_pkg/: CMakeLists.txt  package.xml
utrafman_ws/src/utrafman_pkg/interfaces/utrafman_msgs/msg/: Uplan.msg
utrafman_ws/src/utrafman_pkg/launch/: gazebo_launch.py  hello.launch.py  hello2.launch.py  mundo2.launch.py  sim.launch.py
utrafman_ws/src/utrafman_pkg/models/: floor.sdf
utrafman_ws/src/utrafman_pkg/models/DCmodels/base_drone/: model.sdf
utrafman_ws/src/utrafman_pkg/models/DCmodels/drone/: model.sdf
utrafman_ws/src/utrafman_pkg/models/DCmodels/drone/design/: abejorro3D.pptx
utrafman_ws/src/utrafman_pkg/models/DCmodels/drone/dynamics/: simulation.slx
utrafman_ws/src/utrafman_pkg/models/DCmodels/ground_plane/: model.sdf
utrafman_ws/src/utrafman_pkg/models/DCmodels/tatami/: model.sdf
utrafman_ws/src/utrafman_pkg/msg/: Operator.msg  Telemetry.msg  UAV.msg  Uplan.msg  Waypoint.msg
utrafman_ws/src/utrafman_pkg/plugins/: DCnavigation.cc  UAVNavigation.cc  World.cc  dronecontrol_copy.cc  model_push.cc
utrafman_ws/src/utrafman_pkg/src/: AirSpaceManager.cc  CMakeLists.txt  GazeboPlugin.cc  HelloWorld.cc  UAVManager.cc  hello_world.cc  utrafman_gazebo.cc
utrafman_ws/src/utrafman_pkg/srv/: GetFPs.srv  GetOperators.srv  GetTelemetry.srv  GetUAVs.srv  RegisterFP.srv  RegisterOperator.srv  RegisterUAV.srv  RemoveUAV.srv  TranslateUAV.srv  deploy_UAV.srv  get_FPs.srv  get_UAVs.srv  get_operators.srv  mon_get_locs.srv  register_FP.srv  register_UAV.srv  register_operator.srv  remove_model.srv  teletransport.srv
utrafman_ws/src/utrafman_pkg/worlds/: DroneChallenge.world  generated_city.world  hello.world  tatami.world
worlds/: round1.full.world  round1.world  tatami.world
ws/src/navsim_pkg/: CMakeLists.txt  package.xml
ws/src/navsim_pkg/models/DC/abejorro/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/abejorro1/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/abejorro2/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/abejorro3/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/abejorro4/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/abejorroC/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/base_drone/: model.sdf
ws/src/navsim_pkg/models/DC/drone/: model.sdf  model_pluged.sdf
ws/src/navsim_pkg/models/DC/floor/: model.sdf
ws/src/navsim_pkg/models/DC/frame_blue/: model.config  model.sdf
ws/src/navsim_pkg/models/DC/frame_red/: model.config
ws/src/navsim_pkg/models/DC/tatami/: model.config  model.sdf
ws/src/navsim_pkg/models/DCmodels/drone/: model.sdf  model_pluged.sdf
ws/src/navsim_pkg/models/DCmodels/drone/dynamics/: linsys1.mat  system_definition.mlx
ws/src/navsim_pkg/models/DCmodels/floor/: model.config  model.sdf
ws/src/navsim_pkg/models/DCmodels/frame_green/: model.config  model.sdf
ws/src/navsim_pkg/models/DCmodels/frame_red/: model.sdf
ws/src/navsim_pkg/models/I3A/: model.config  model.sdf
ws/src/navsim_pkg/models/UAM/aerotaxi/: model.config  model.sdf  test.world
ws/src/navsim_pkg/models/UAM/aerotaxi/design/: aguila.blend  aguila.usdc  esquema.pptx
ws/src/navsim_pkg/models/UAM/aerotaxi/dynamics/: control.pptx  linearization.slx  linsys_aerotaxi.mat  simulation.slx  system_definition.mlx
ws/src/navsim_pkg/models/UAM/aerotaxi/test/: Pilot.slx  exponential_pdf.m  reference.mat  test.m  test.world  velocidades.m
ws/src/navsim_pkg/models/UAM/drone/: model.sdf  model_pluged.sdf
ws/src/navsim_pkg/models/UAM/minidrone/: model.config  model.sdf  model_FP1.sdf
ws/src/navsim_pkg/models/UAM/minidrone/dynamics/: system_definition.mlx
ws/src/navsim_pkg/models/UAM/vertiport_H/: model.config  model.sdf
ws/src/navsim_pkg/models/UAM/vertiport_H5/: model.sdf
ws/src/navsim_pkg/plugins/: DCdrone.cc  DCnavigation.cc  UAM_aerotaxi_FP1.cc  UAM_aerotaxi_cmd.cc  UAM_mini_drone.cc  UAM_minidrone_FP1.cc  UAM_minidrone_cmd.cc  World.cc  dronecontrol.cc  utrafman_gazebo.cc
ws/src/navsim_pkg/worlds/: DroneChallenge.world  I3A.world  UAM_DC_copy.world  empty.world  generated_city.world  hello.world  tatami.world  tatami2.world
(+300 files in other folders)
